client/src/scss/styles.scss
/* ... */
.movie-detail, .cast-page{
  background-color: $white;
  .backdrop{
    height: 500px;
    width: 100%;
    background-size: cover;
  }
  .cover{
    position: absolute;
    z-index: 100;
    width: 185px !important;
    left: 17% !important;
    top: 280px;
    margin-top: 110px;
    img{
      display: block;
      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
    }
    ul{
      margin-top: 25px;
      color: $black;
      display: flex;
      flex-flow: column wrap;
      align-items: center;
      li{
        padding: 10px;
        color: $white;
        i{
          transition: all 0.3s ease;
          font-size: 20px;
          background-color: $black;
          border-radius: 50%;
          padding: 13px;
          box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.2);
          &:hover{
            background-color: $red;
            cursor: pointer;
          }
        }
      }
    }
  }
  .sticky-container{
    background-color: red;
    padding-bottom: 0 !important;
  }
  .movie-menu{
    position: relative;
    display: flex;
    position: relative;
    justify-content: center;
    top: -5px;
    border-top: 1px solid #d7d7d7;
    border-bottom: 1px solid #d7d7d7;
    background-color: $white;
    font-size: 16px;
    font-weight: 700;
    padding-left: 250px;
    a{
      color: $black;
      border-bottom: 5px solid $white;
      &:hover{
        cursor: pointer;
        color: $red;
        border-bottom: 5px solid $red;
      }
    }
    ul{
      box-sizing: border-box;
      display: flex;
      flex-flow: row wrap;
      align-items: center;
      justify-content: flex-start;
      width: 690px;
      li{
        padding: 20px;
      }
    }
  }
  .movie-info-wrapper{
    position: relative;
    color: $black;
    background-color: $white;
    margin: 0 auto;
    margin-left: 250px;
    display: flex;
    justify-content: center;
    flex-flow: row wrap;
  }
  .movie-info{
    margin-bottom: 100px;
    section{
      padding-top: 80px;
      margin-bottom: -50px;
      &:first-of-type{
        padding-top: 0;
      }
      .heading-info{
        display: flex;
        align-items: center;
        justify-content: space-between;
        h1, p, span{
          margin: 0;
          padding: 20px 0;
        }
        p{
          font-size: 20px;
          font-weight: 700;
        }
        .heading-votes span{
          font-size: 10px;
          font-weight: 500;
        }
      }
    }
    max-width: 650px;
    h1{
      color: $red;
      font-weight: 900;
      span{
        color: $black;
        font-size: 18px;
        font-weight: 400;
        margin-bottom: 20px;
      }
    }
    h2{
      margin: 25px 0;
    }
    p{
      margin-top: 35px;
      line-height: 25px;
    }
    .movie-genres{
      a{
        font-size: 10px;
        padding: 7px 15px;
        border-radius: 5px;
        margin-right: 10px;
      }
    }
    .movie-releaseinfo{
      display: flex;
      p{
        margin-top: 20px;
        font-size: 12px;
        letter-spacing: 1px;
        font-weight: 700;
        padding: 0px 10px;
        border-right: 1px solid $red;
        &:first-of-type{
          padding-left: 0;
        }
        &:last-of-type{
          border-right: none;
        }
      }
      a{
        padding: 0px 10px;
        font-size: 12px;
        color: #221f1f;
        letter-spacing: 1px;
        font-weight: 700;
        margin: 0;
        margin-top: 20px;
        line-height: 25px;
        border-left: 1px solid $red;
        &:hover{
          color: $red;
        }
      }
    }
    .cast{
      margin: 25px -15px;
      display: flex;
      flex-flow: row wrap;
      color: $black;
    }
    .videos-list{
      display: flex;
      flex-flow: row nowrap;
      overflow-x: auto;
    }
    .recommendations{
      display: flex;
      overflow-x: auto;
      .recommendation-item{
        display: flex;
        flex-flow: column nowrap;
        max-width: 250px;
        transition: all 0.3 ease-in;
        &:hover {
          background-color: $red;
        }
        &:hover > .recommendation-info > p,
        &:hover > .recommendation-info > span{
          color: $white;
        }
        .recommendation-noimg{
          background-color: $black;
          height: 141px;
          width: 250px;
        }
        .recommendation-info{
          padding: 10px;
          display: flex;
          flex-direction: row;
          justify-content: space-between;
          align-items: center;
          overflow: hidden;
          p{
            color: $black;
            white-space: nowrap;
            overflow: hidden;
            text-overflow: ellipsis;
            margin: 0;
            margin-right: 10px;
          }
          span{
            color: $black;
            font-size: 16px;
            margin: 0;
          }
        }
      }
    }
  }
  nav.movie-nav{
    width: calc(185px);
  }
}

.actor-card{
  padding: 5px;
  width: calc(25% - 10px);
  height: 100%;
  background-color: $white;
  display: flex;
  flex-flow: column wrap;
  align-items: center;
  text-align: center;
  strong{
    margin-top: 20px;
  }
  p{
    line-height: normal !important;
    margin: 5px !important;
  }
  .actor-portrait{
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
    overflow: hidden;
    border-radius: 2px;
    img{
      display: block;
      width: 100%;
    }
    .no-portrait{
      display: flex;
      align-items: center;
      justify-content: center;
      width: 138px;
      height: 175px;
      background-color: $grey;
      i{
        font-size: 60px;
        color: $grey2;
      }
    }
  }
}

//MOVIES PAGE
#movies-catalog{
  margin: 130px 0 0 0;
}
/* ... */

